add-password-security-tips

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="fr - FR">
+<html lang="fr">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <link rel="icon" type="image/x-icon" href="../../public/icons8-chapeau-de-chef-64.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Blog de cuisine qui propose des recettes et critiques de restaurants écrites par la célèbre Alice Ocklecook.">
     <title>O'cook</title>
   </head>
