--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="../../public/icons8-chapeau-de-chef-64.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Blog de cuisine qui propose des recettes et critiques de restaurants écrites par la célèbre Alice Ocklecook.">
-    <meta name="keywords" content="recettes, reviews, entrée, plat, dessert, viande, végétalien, cuisiner">
+    <meta name="keywords" content="recettes, avis, restaurant, entrée, plat, dessert, viande, végétalien, cuisiner">
     <meta name="title" content="O'Cook, un blog de recette de cuisine et de reviews de restaurants">
     <title>O'cook</title>
   </head>
